[metadata]
name = readable_number
version = v0.1.1
description = A Python library to print numbers in human readable format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsh9/readable-number
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    tests*
include =
    readable_number
    readable_number.*

[bdist_wheel]
universal = True
